update register template

--- a/conFusion/www/templates/register.html
+++ b/conFusion/www/templates/register.html
@@ -20,6 +20,12 @@
         </button>
         </label>
         <label class="item item-input">
+        <button class="button button-block button-balanced" type="button" ng-click="selectPicture()">
+             Select Picture
+         </button>
+         </label>
+        </label>
+        <label class="item item-input">
           <span class="input-label">First Name</span>
           <input type="text" ng-model="registration.firstname">
         </label>
