--- a/conFusion/www/templates/register.html
+++ b/conFusion/www/templates/register.html
@@ -21,7 +21,7 @@
         </label>
         <label class="item item-input">
         <button class="button button-block button-balanced" type="button" ng-click="selectPicture()">
-             Select Picture
+             Gallery
          </button>
          </label>
         </label>
